exports[`modularScale should allow adjusting the base 1`] = `
Object {
  "font-size": "2.666em",
}
`;

exports[`modularScale should use perfect fourth and 1em base by default 1`] = `
Object {
  "font-size": "1.333em",
}
`;
